--- a/cover.css
+++ b/cover.css
@@ -27,6 +27,8 @@ html,
 body {
   height: 100%;
   background-color: #421b08;
+  background-image: url(http://tr1.cbsistatic.com/hub/i/2015/07/24/b93e2c45-59ee-448d-b2e9-55b39382def2/artificial-intelligence-brain-ai.jpg);
+
 }
 body {
   color: #fff;
